@@ -5,18 +5,16 @@ AUX xz-utils-4.999.9_beta-darwin.patch 732 RMD160 75fbf90ff0e3f12f49400801aa348f
 AUX xz-utils-4.999.9_beta-hpux.patch 767 RMD160 86ea961618cd4e2887cd0d7a54c6afdf757a995c SHA1 56fab4eb248acc4945efb9bb578bc3238b3ed539 SHA256 b6cfc3e1a4aa97020515570d4f78dc192e362e403e09d5e20dc1e32aa5c37644
 AUX xz-utils-4.999.9_beta-interix.patch 1360 RMD160 35afc55c1e1af347aee09ff484e40771a6b0dc2b SHA1 b2e839bef2bf7ab003a7d56cbc24012abc16033c SHA256 bb1d5d69f48afd40cba93727403ae6a1897a0b8925a7c3c9cedb923e7244e97a
 AUX xz-utils-5.0.0-interix.patch 1010 RMD160 2d054b0c569daeea9abf95218664df1e4ba9efa5 SHA1 0fb3cbb80d5da0e09181508814d82a7fbfa745df SHA256 e094eedf7a4739ab9b30baad6ba72c78b022e93d8a00d0c393e66478a561e12c
-DIST xz-4.999.9beta.tar.gz 1037541 RMD160 1253ce01746c748c8549effa5041224044919c4e SHA1 9627de3997ddcdb02f8d327e84b2cf1941ecd230 SHA256 fa3901d1c034842da47fec1a24a9b5a5bd435f5ecfbb444c168512e2daddb86f
 DIST xz-5.0.0.tar.gz 1232154 RMD160 c336b081bdd056290f18903b0b0c3b657b141d58 SHA1 bcce697d7f09584f0feb21e35b13a15ba7417a1f SHA256 eba9211990a642fc2c35ea02618b710c7fa898d78ccca48b546a07bdde03c44d
 DIST xz-5.0.3.tar.gz 1257140 RMD160 81f8a268dad49f46e4b4cacf9dd5bc23525170f5 SHA1 50ce842bea6519537457d9ad90d110a127656786 SHA256 10eb4df72dffb2fb14c3d2d82b450e72282ffcb9ee3908a8e5b392b8f09681bf
-EBUILD xz-utils-4.999.9_beta-r00.1.ebuild 1980 RMD160 8b3e0623d5ad6578fa7e8427c9dc58bb8edc94aa SHA1 5da983156e338b7173b157bffb84b87cc9123d14 SHA256 dfc137f190d2ce8e0e9e5ec5afd7c0d1d85352588eae861de1d45925d20e02ea
 EBUILD xz-utils-5.0.0.ebuild 2320 RMD160 8fb343aa9258b2e3ff598d1399f251645f7c9ede SHA1 1fc6bec7aa318085b99e419c32b260600ea32567 SHA256 13208ed2a939b5a0285fe01a0de0ab4e1378895e981fec6b1115556da271e4b6
-EBUILD xz-utils-5.0.3.ebuild 2297 RMD160 ca8700b64cfec453900e206e4b118e3c86e8bdd2 SHA1 8fb17754cafa4d418b8f9e0a7e2902ab51dedaad SHA256 9f829e1dfcde5189296b1c70301df4940b322ddace100d0fb07db59b470c16ae
-MISC ChangeLog 5421 RMD160 7e1131b28b2deca8beef780e19e1d36775f39c0a SHA1 2d3f2c6ffdef87eacbfa7c4a680f8bdcb99308c3 SHA256 589a0402d49ec32df1ebfdd65871ab05cb2843d922c36b03dcf889eee966d73d
+EBUILD xz-utils-5.0.3.ebuild 2312 RMD160 05977fd6ece458ae2a880ea52c2aa9d71ac6d50f SHA1 669c8ece5e96fbad2c0c54928131fa573bdb0870 SHA256 2bb565fc80e272166db15c36d1247d71a5c5c698bd30940e11c0314a69a3f1c7
+MISC ChangeLog 5697 RMD160 dcd9085491bc5091e35356b7caf01fc638aea24e SHA1 250c06675b9482ef7557a561f9c7c64aa9621209 SHA256 44f3e6724cca60e9b63f7737abb7baf8d3e24397b7a8fb65e0e05476344a9b12
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (Darwin)
+Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk8b0ZIACgkQX3X2B8XHTom8tACghbOdgwp2kSs9JWE8u8UQya+w
-fIEAoKWrQBfG+eoetxXl8drLywXEnU5N
-=NDyU
+iEYEARECAAYFAk+0pMAACgkQX3X2B8XHTonECACeNLTWllsNSR6D/oG3FxynfTqO
+JlEAoJV15c/PcQm4Itklwc6Alnur7j5h
+=ulj6
 -----END PGP SIGNATURE-----
